--- a/index4.html
+++ b/index4.html
@@ -1,4 +1,3 @@
-<!-- index.html -->
 <!doctype html>
 <html lang="zh-Hant">
 <meta charset="utf-8" />
@@ -24,8 +23,8 @@
     <input id="name" type="text" placeholder="你的名字" value="Public">
     <label>來源語言</label>
     <select id="srcLang">
-      <option value="auto" selected>自動偵測</option>
-      <option value="zh">中文（強制）</option>
+      <option value="auto">自動偵測</option>
+      <option value="zh" selected>中文（強制）</option>
       <option value="ko">韓文（強制）</option>
     </select>
     <button id="join">加入</button>
@@ -50,7 +49,7 @@
   <div class="logs" id="logs"></div>
 
 <script>
-/* 換成你的 Cloudflare Tunnel 網域（要包含 https://） */
+/* 換成你的 Cloudflare Tunnel 網域（含 https://） */
 const TUNNEL_HOST = "https://room-rug-submitted-invitations.trycloudflare.com";
 
 let ws=null, audioCtx=null, worklet=null, stream=null, pingTimer=null, txTimer=null;
